[gd_scene load_steps=7 format=2]

[ext_resource path="res://Enemy.gd" type="Script" id=1]
[ext_resource path="res://enemy_eye.png" type="Texture" id=2]
[ext_resource path="res://CollisionPolygon2D.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="CapsuleShape2D" id=2]
radius = 11.6056
height = 7.62194

[sub_resource type="ShaderMaterial" id=3]

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
hframes = 5
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Visibility" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="DetectionPolygon" type="CollisionPolygon2D" parent="Visibility"]
script = ExtResource( 3 )
detect_radius = 300

[node name="Polygon2D" type="Polygon2D" parent="Visibility/DetectionPolygon"]
color = Color( 0, 0, 0, 0.517647 )

[node name="Particles2D" type="Particles2D" parent="."]
visible = false
position = Vector2( 0.176102, 16.0264 )
process_material = SubResource( 3 )

[connection signal="body_entered" from="Visibility" to="." method="_on_Visibility_body_entered"]
[connection signal="body_exited" from="Visibility" to="." method="_on_Visibility_body_exited"]
